# FinalVersX

./: ___All_Errors.txt
lab11/: CMakeLists.txt  Tests.cpp  main.cpp
lab11/algorithms/: all_of.h  any_of.h  find_backward.h  find_not.h  is_palindrome.h  is_partitioned.h  is_sorted.h  none_of.h  one_of.h
lab11/utils/: xrange.h  zip.h
